<resources>
    <string name="app_name">Forgift and Forget</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Friends List Action Bar Strings-->
    <string name="add_friend">Add Friend</string>
    <string name="add_gift">Add Gift</string>
    <string name="logout">Logout</string>


    <!-- Gift Idea Strings -->
    <string name="giftIdeaName">Name</string>
    <string name="giftIdeaNotes">Notes</string>
    <string name="giftIdeaGallery">Pick From Gallery</string>

    <!-- Event Creation Strings -->
    <string name="Event">Event</string>
    <string name="Date">Date: mm-dd-yyyy</string>
    <string name="Time">Time</string>
    <string name="Add_Event">Add Event</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register">New User? Register.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already Registered? Login.</string>
    <string name="update_event">Update Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="friend_image">Friend Image</string>
    <string name="name">Name</string>
</resources>
